# sutradhara

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  Sutradhara_Submission_Deck_Filled.pptx  deploy_backend.sh  deploy_cloudrun.sh  display_db.py  docker-compose.yml  pyproject.toml  test_crew.py  test_query.py  test_vertex.py  test_vertex_call.py  verify_traces.py
.github/workflows/: deploy-frontend.yml
alembic/: env.py
app/: __init__.py  config.py  main.py
app/agents/: anticipator.py  calendar_specialist.py  crew.py  focus_agent.py  manager.py  notion_specialist.py  planner.py  research_specialist.py
app/agents/tools/: db_tools.py  focus_tools.py  research_tools.py  rollback_tools.py  thought_tools.py  visualization.py
app/api/: routes.py  websocket.py
app/auth/: google_auth.py  notion_auth.py
app/database/: engine.py  models.py  schemas.py
app/mcp_servers/: calendar_server.py  notion_server.py
app/services/: anticipator_service.py  cloud_storage.py  demo_service.py  memory_service.py  pending_actions_service.py  rollback_service.py  scheduler_service.py  speech_service.py  trace_service.py
docs/: setup_google_calendar.md  setup_notion.md
frontend/: app.js  index.html  styles.css
scratch/: check_db.py  debug_backend.py  list_models.py  test_notion.py
scripts/: add_timestamp_properties.py  create_notion_db.py  provision_cloud_sql.sh  seed_demo.py  setup_gcp_billing.sh
tests/: test_crew.py  test_services.py
